# zio-lucene-test

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  Makefile  README.md  bazel-bin  bazel-out  bazel-testlogs  bazel-zio-lucene  build.mill  current_task.md  current_task_prompt  defs.bzl  makefile  prompt.md  service-manifest.yaml
.bsp/: mill-bsp.json
.bsp/mill-bsp-out/: mill-dependency-tree.json  mill-invalidation-tree.json  mill-profile.json  version.json
.bsp/mill-bsp-out/mill-build/: allSourceFiles.json  allSources.json  artifactTypes.json  bspScriptIgnoreAll.json  bspScriptIgnoreDefault.json  cliImports.json  codeSignatures.json  compile.json  compileClasspath.json  compileGeneratedSources.json  compileMvnDeps.json  compileResources.json  enablePluginScalacOptions.json  generatedScriptSources.json  generatedSources.json  localClasspath.json  localCompileClasspath.json  localRunClasspath.json  mandatoryMvnDeps.json  mill-dependency-tree.json  mill-invalidation-tree.json  mill-profile.json  mill-runner-state.json  millBuildRootModuleResult.json  millVersion.json  mvnDeps.json  parseBuildFiles.json  resolvedMvnDeps.json  resolvedRunMvnDeps.json  resources.json  runClasspath.json  runMvnDeps.json  scalaCompilerBridge.json  scalaCompilerClasspath.json  scalaLibraryMvnDeps.json  scalaOrganization.json  scalacOptions.json  scalacPluginClasspath.json  scalacPluginMvnDeps.json  scriptSources.json  (+4 more)
.bsp/mill-bsp-out/mill-launcher/: mill-opts
.bsp/mill-bsp-out/mill.javalib.CoursierConfigModule/: coursierEnv.json
.claude/plans/: otel-collector-implementation.md
.claude/skills/bazel-build/: SKILL.md
.claude/skills/data-pipeline/: SKILL.md
.claude/skills/infrastructure-devops/: SKILL.md
.claude/skills/lucene-search/: SKILL.md
.claude/skills/make-utils/: SKILL.md
.claude/skills/mill-build/: SKILL.md
.claude/skills/scala-zio/: SKILL.md
app/ingestion/api/: BUILD.bazel  HealthEndpoint.scala
app/ingestion/domain-private/: BUILD.bazel
app/ingestion/domain-public/: BUILD.bazel
app/ingestion/server/: BUILD.bazel  Server.scala
app/ingestion/services/: BUILD.bazel
app/reader/api/: BUILD.bazel
app/reader/domain-private/: BUILD.bazel
app/reader/server/: BUILD.bazel
app/reader/services/: BUILD.bazel
app/writer/api/: BUILD.bazel
app/writer/domain-private/: BUILD.bazel
app/writer/domain-public/: Temp.scala
app/writer/server/: BUILD.bazel
app/writer/services/: BUILD.bazel
common/activity-logging/src/: ActivityLog.scala
common/aws-base/src/: AwsBase.scala
common/aws-s3/src/: AwsS3.scala
common/aws-sqs/src/: AwsSqs.scala
common/base-telemetry/resources/: logback.xml
common/base-telemetry/src/: BaseTelemetry.scala  OtelLoggerMiddleware.scala
common/server-utils/src/: ServerLayers.scala
common/sqs-tracing/src/: SqsTracing.scala
common/sttp-client/src/: SttpClientLayer.scala
docs/: sqs-tracing-spec.md  zio-otel-logging-learnings.md
infra/: Pulumi.dev.yaml  Pulumi.local.yaml  Pulumi.prod.yaml  Pulumi.yaml
infra/.bsp/: scala-cli.json
infra/.scala-build/: ide-envs.json  ide-inputs.json  ide-options-v2.json
infra/.scala-build/.bloop/: infra_0be52a0ff5.json  infra_36ed8d1a99.json  infra_ee6e248915-test.json  infra_ee6e248915.json  project_51a9fbe0e8.json  project_5e9c97d7c8.json  project_870613c347.json  project_96cd1c00b3.json
infra/src/: Main.scala  ServiceManifest.scala
infra/src/.bsp/: scala-cli.json
infra/src/.scala-build/: ide-envs.json  ide-inputs.json
infra/src/platform/: ArgoCD.scala  AwsProvider.scala  ExternalSecrets.scala  IamRoles.scala  K8Provider.scala
infra/src/providers/: AwsProvider.scala  K8Provider.scala
infra/src/resources/: AppSecrets.scala  Buckets.scala  Queues.scala
infra/src/utils/: AlbController.scala  EKS.scala  (+18 more)
ingestion/k8s/: Chart.yaml  values.yaml
reader/k8s/: Chart.yaml  values.yaml
writer/k8s/: Chart.yaml  values.yaml
(+433 files in other folders)
