module(
    name = "zio-lucene",
    version = "0.1.0",
)

bazel_dep(name = "rules_jvm_external", version = "6.5")
bazel_dep(name = "rules_scala", version = "7.1.5")

scala_config = use_extension("@rules_scala//scala/extensions:config.bzl", "scala_config")
scala_config.settings(scala_version = "3.3.7")

scala_deps = use_extension("@rules_scala//scala/extensions:deps.bzl", "scala_deps")
scala_deps.scala()

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # ZIO Core
        "dev.zio:zio_3:2.1.17",
        "dev.zio:izumi-reflect_3:3.0.8",
        "dev.zio:izumi-reflect-thirdparty-boopickle-shaded_3:2.3.10",
        "dev.zio:zio-stacktracer_3:2.1.17",
        "dev.zio:zio-internal-macros_3:2.1.17",

        # ZIO Streams
        "dev.zio:zio-streams_3:2.1.17",

        # ZIO Kafka
        "dev.zio:zio-kafka_3:2.9.0",

        # ZIO HTTP
        "dev.zio:zio-http_3:3.0.1",

        # Tapir
        "com.softwaremill.sttp.tapir:tapir-core_3:1.11.10",
        "com.softwaremill.sttp.tapir:tapir-zio_3:1.11.10",
        "com.softwaremill.sttp.tapir:tapir-json-zio_3:1.11.10",
        "com.softwaremill.sttp.tapir:tapir-zio_3:1.11.10",
        "com.softwaremill.sttp.tapir:tapir-zio-http-server_3:1.11.10",

        # STTP Model (required by Tapir)
        "com.softwaremill.sttp.model:core_3:1.7.11",

        # Besom (Pulumi for Scala)
        "org.virtuslab:besom-core_3:0.5.0",
        "org.virtuslab:besom-aws_3:7.7.0-core.0.5",

        # ZIO S3
        "dev.zio:zio-s3_3:0.4.3",

        # Lucene
        "org.apache.lucene:lucene-core:9.9.1",
        "org.apache.lucene:lucene-queryparser:9.9.1",
        "org.apache.lucene:lucene-analysis-common:9.9.1",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
