load("//:defs.bzl", "zio_scala_library")

zio_scala_library(
    name = "server",
    visibility = ["//app/ingestion:__subpackages__"],
    deps = [
        "@maven//:dev_zio_zio_http_3",
        "@maven//:com_softwaremill_sttp_tapir_tapir_zio_3",
        "@maven//:com_softwaremill_sttp_tapir_tapir_zio_http_server_3",
        "//app/ingestion/domain-public",
        "//app/ingestion/domain-private",
        "//app/ingestion/api",
        "//app/ingestion/services",
    ],
)
