load("//:defs.bzl", "zio_scala_library")

zio_scala_library(
    name = "server",
    visibility = ["//app/reader:__subpackages__"],
    deps = [
        "@maven//:dev_zio_zio_http_3",
        "@maven//:com_softwaremill_sttp_tapir_tapir_zio_3",
        "@maven//:com_softwaremill_sttp_tapir_tapir_zio_http_server_3",
        "//app/reader/domain-public",
        "//app/reader/domain-private",
        "//app/reader/api",
        "//app/reader/services",
    ],
)
